[infra-mon] moves ipmi-exporter

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -47,6 +47,11 @@ dependencies:
     repository: file://vendor/ironic-exporter
     version: 1.0.0
     condition: ironic-exporter.enabled
+
+  - name: ipmi-exporter
+    repository: file://vendor/ipmi-exporter
+    version: 1.0.0
+    condition: ipmi-exporter.enabled
   
   - name: atlas
     alias: atlas
