--- a/openstack/tempest/neutron-tempest/templates/seed.yaml
+++ b/openstack/tempest/neutron-tempest/templates/seed.yaml
@@ -165,6 +165,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin1
         role: resource_admin
+      - project: neutron-tempest-admin1
+        role: cloud_compute_admin
       - project: neutron-tempest-admin2
         role: member
       - project: neutron-tempest-admin2
@@ -177,6 +179,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin2
         role: resource_admin
+      - project: neutron-tempest-admin2
+        role: cloud_compute_admin
       - project: neutron-tempest-admin3
         role: member
       - project: neutron-tempest-admin3
@@ -189,6 +193,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin3
         role: resource_admin
+      - project: neutron-tempest-admin3
+        role: cloud_compute_admin
       - project: neutron-tempest-admin4
         role: member
       - project: neutron-tempest-admin4
@@ -201,6 +207,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin4
         role: resource_admin
+      - project: neutron-tempest-admin4
+        role: cloud_compute_admin
       - project: neutron-tempest1
         role: member
       - project: neutron-tempest1
@@ -317,6 +325,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin1
         role: resource_admin
+      - project: neutron-tempest-admin1
+        role: cloud_compute_admin
       - project: neutron-tempest-admin2
         role: member
       - project: neutron-tempest-admin2
@@ -329,6 +339,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin2
         role: resource_admin
+      - project: neutron-tempest-admin2
+        role: cloud_compute_admin
       - project: neutron-tempest-admin3
         role: member
       - project: neutron-tempest-admin3
@@ -341,6 +353,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin3
         role: resource_admin
+      - project: neutron-tempest-admin3
+        role: cloud_compute_admin
       - project: neutron-tempest-admin4
         role: member
       - project: neutron-tempest-admin4
@@ -353,6 +367,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin4
         role: resource_admin
+      - project: neutron-tempest-admin4
+        role: cloud_compute_admin
       - project: neutron-tempest1
         role: member
       - project: neutron-tempest1
@@ -469,6 +485,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin1
         role: resource_admin
+      - project: neutron-tempest-admin1
+        role: cloud_compute_admin
       - project: neutron-tempest-admin2
         role: member
       - project: neutron-tempest-admin2
@@ -481,6 +499,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin2
         role: resource_admin
+      - project: neutron-tempest-admin2
+        role: cloud_compute_admin
       - project: neutron-tempest-admin3
         role: member
       - project: neutron-tempest-admin3
@@ -493,6 +513,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin3
         role: resource_admin
+      - project: neutron-tempest-admin3
+        role: cloud_compute_admin
       - project: neutron-tempest-admin4
         role: member
       - project: neutron-tempest-admin4
@@ -505,6 +527,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin4
         role: resource_admin
+      - project: neutron-tempest-admin4
+        role: cloud_compute_admin
       - project: neutron-tempest1
         role: member
       - project: neutron-tempest1
@@ -621,6 +645,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin1
         role: resource_admin
+      - project: neutron-tempest-admin1
+        role: cloud_compute_admin
       - project: neutron-tempest-admin2
         role: member
       - project: neutron-tempest-admin2
@@ -633,6 +659,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin2
         role: resource_admin
+      - project: neutron-tempest-admin2
+        role: cloud_compute_admin
       - project: neutron-tempest-admin3
         role: member
       - project: neutron-tempest-admin3
@@ -645,6 +673,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin3
         role: resource_admin
+      - project: neutron-tempest-admin3
+        role: cloud_compute_admin
       - project: neutron-tempest-admin4
         role: member
       - project: neutron-tempest-admin4
@@ -657,6 +687,8 @@ spec:
         role: cloud_network_admin
       - project: neutron-tempest-admin4
         role: resource_admin
+      - project: neutron-tempest-admin4
+        role: cloud_compute_admin
       - project: neutron-tempest1
         role: member
       - project: neutron-tempest1
