--- a/system/prometheus-server/templates/thanos/thanos-seed.yaml
+++ b/system/prometheus-server/templates/thanos/thanos-seed.yaml
@@ -24,7 +24,7 @@ spec:
 
     - name: {{ required ".Values.thanos.swiftStorageConfig.domainName missing" .Values.thanos.swiftStorageConfig.domainName }}
       projects:
-        - name: {{ required ".Values.thanos.swiftStorageConfig.tenantName missing" .Values.thanos.swiftStorageConfig.tenantName }}
+        - name: {{ include "thanos.projectName" . }}
           roles:
             # Permission to write to ccadmin/master containers.
             - user: {{ required ".Values.thanos.swiftStorageConfig.userName missing" .Values.thanos.swiftStorageConfig.userName }}@{{ required ".Values.thanos.swiftStorageConfig.userDomainName missing" .Values.thanos.swiftStorageConfig.userDomainName }}
