--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -137,7 +137,7 @@ thanos:
     # userDomainName:
     # password:
     # domainName:
-    # tenantName:
+    # projectName:
     # regionName:
     # containerName:
 
@@ -156,7 +156,7 @@ thanos:
 
   # See https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#thanosspec .
   spec:
-    image: "sapcc/thanos:v0.4.0-3-gd763e32"
+    image: "sapcc/thanos:v0.4.0-2-ga680c93"
 
 # The labels to add to any time series or alerts when communicating with
 # external systems (federation, remote storage, Alertmanager).
