--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -138,6 +138,7 @@ thanos:
     # password:
     # domainName:
     # projectName:
+    # projectDomainName:
     # regionName:
     # containerName:
 
