fix global infra prometheus

--- a/global/prometheus-infra/values.yaml
+++ b/global/prometheus-infra/values.yaml
@@ -28,7 +28,7 @@ prometheus-infra-global:
 
   # Comment the `prometheus-sso-cert` if SSO is not used (aka authentication.enabled=false)
   secrets:
-    - prometheus-sso-cert
+    - prometheus-infra-sso-cert
 
   # Disable alerting until the transition to the operated Prometheus was done in all regions.
   # alertmanagers:
