--- a/global/prometheus-infra/templates/alerts.yaml
+++ b/global/prometheus-infra/templates/alerts.yaml
@@ -7,7 +7,7 @@ kind: PrometheusRule
 metadata:
   name: infra-{{ printf "%s" $path | replace "/" "-" }}
   labels:
-    tier: os
+    tier: infra
     type: alerting-rules
     prometheus: {{ required "$values.alerts.prometheus missing" $values.alerts.prometheus }}
 
