--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -347,3 +347,9 @@ lifesaver:
 
 cors:
   enabled: false
+
+# Deploy Keystone Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
