--- a/openstack/cinder/templates/api-service.yaml
+++ b/openstack/cinder/templates/api-service.yaml
@@ -11,6 +11,7 @@ metadata:
     prometheus.io/scrape: "true"
     maia.io/scrape: "true"
     prometheus.io/port: {{.Values.port_metrics | quote }}
+    prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
 spec:
   selector:
     name: cinder-api
