[Nova-Alerts] Moving alerts to Prom-OS tier

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -12,7 +12,7 @@ global:
   placementApiPortInternal: '8778'
   placementApiPortPublic: '443'
   master_password: null
-  
+
   dbUser: nova
 
   nova_service_user: nova
@@ -470,7 +470,7 @@ postgresql:
     metrics: true
     os_password: null
 
-  resources: 
+  resources:
     requests:
       cpu: "1000m" # 1 cpu
       memory: "7Gi" # 6.3Gi high recorded
@@ -666,3 +666,9 @@ sync_neutron_cache:
 # openstack-watcher-middleware
 watcher:
   enabled: true
+
+# Deploy Sentry Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
