--- a/openstack/nova/templates/api-service.yaml
+++ b/openstack/nova/templates/api-service.yaml
@@ -11,6 +11,7 @@ metadata:
     prometheus.io/scrape: "true"
     maia.io/scrape: "true"
     prometheus.io/port: "{{.Values.portMetrics}}"
+    prometheus.io/targets: "{{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus }}"
 
 spec:
   selector:
