[Ironic-Alerts] Moving alerts to Prom-OS tier

--- a/openstack/ironic/values.yaml
+++ b/openstack/ironic/values.yaml
@@ -286,3 +286,9 @@ logging:
 
 watcher:
   enabled: false
+
+# Deploy Ironic Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
