--- a/openstack/ironic/charts/wham/templates/deplyoment.yaml
+++ b/openstack/ironic/charts/wham/templates/deplyoment.yaml
@@ -26,6 +26,7 @@ spec:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "{{ .Values.metricPort }}"
+        prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
     spec:
       containers:
       - name: {{ include "wham.name" . }}
