remove tolerations for prometheus-infra pod

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -49,11 +49,11 @@ prometheus_server:
   logLevel: info
 
   # Tolerations match the taint
-  tolerations:
-    - key: "context"
-      operator: "Equal"
-      value: "monitoring"
-      effect: "PreferNoSchedule"
+  #tolerations:
+  #  - key: "context"
+  #    operator: "Equal"
+  #    value: "monitoring"
+  #    effect: "PreferNoSchedule"
 
   # Kubernetes resource requests and limits for this Prometheus.
   resources:
