--- a/openstack/ironic/charts/ironic-exporter/values.yaml
+++ b/openstack/ironic/charts/ironic-exporter/values.yaml
@@ -1,10 +1,10 @@
 enabled: false
-imageRepository: monsoon/wham
-imageTag: ce482524
-metricPort: 9090
-listenPort: 80
-debugLevel: "info"
+image:
+  repository: monsoon/ironic-exporter
+  tag: 0d335501
+port_number: 9191
 
+log_level: "INFO"
 os_user_domain_name: "Default"
 os_project_name: "master"
 os_project_domain_name: "ccadmin"
