fix copy-paste errors

--- a/openstack/castellum/templates/prometheus-alerts.yaml
+++ b/openstack/castellum/templates/prometheus-alerts.yaml
@@ -8,7 +8,7 @@ kind: PrometheusRule
 metadata:
   name: {{ printf "%s" $path | replace "/" "-" }}
   labels:
-    app: limes-api
+    app: castellum
     tier: os
     type: alerting-rules
     prometheus: {{ required ".Values.alerts.prometheus missing" $values.alerts.prometheus }}
