[ironic] adds prom name for ironic-exp

--- a/openstack/ironic/charts/ironic-exporter/values.yaml
+++ b/openstack/ironic/charts/ironic-exporter/values.yaml
@@ -8,3 +8,8 @@ log_level: "INFO"
 os_user_domain_name: "Default"
 os_project_name: "master"
 os_project_domain_name: "ccadmin"
+
+# Deploy Ironic Prometheus alerts.
+alerts:
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
