change prometheus-infra ingress name

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -23,7 +23,7 @@ prometheus_server:
 
   ingress:
     enabled: true
-    host: prometheus-infra-scaleout
+    host: prometheus-infra.scaleout
 
   # Store on disk
   persistence:
