scrape ingress metrics

--- a/system/kube-system/values.yaml
+++ b/system/kube-system/values.yaml
@@ -77,11 +77,13 @@ nginx-ingress:
         annotations:
           prometheus.io/scrape: "true"
           prometheus.io/probe: "10254"
+          prometheus.io/targets: "kubernetes,openstack"
 
     service:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "10254"
+        prometheus.io/targets: "kubernetes,openstack"
 
       targetPorts:
         http: http
