--- a/system/kube-system/charts/disco/templates/deployment.yaml
+++ b/system/kube-system/charts/disco/templates/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: {{ default 9091 .Values.metricPort | quote }}
+        prometheus.io/targets: "kubernetes"
     spec:
       containers:
         - name: disco
