--- a/system/kube-system/values.yaml
+++ b/system/kube-system/values.yaml
@@ -143,6 +143,7 @@ nginx-ingress:
     podAnnotations:
       prometheus.io/scrape: "true"
       prometheus.io/port: "8080"
+      prometheus.io/targets: "kubernetes,openstack"
 
     # ingress backend only on master nodes
     nodeSelector:
