[infra-mon] move arista exporter

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -53,3 +53,9 @@ dependencies:
     repository: file://vendor/atlas
     version: 1.0.0
     condition: atlas.enabled
+
+  - name: arista-exporter
+    alias: arista-exporter
+    repository: file://vendor/arista-exporter
+    version: 0.1.0
+    condition: arista-exporter.enabled
