more exporters to new proms

--- a/system/kube-monitoring/charts/blackbox-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/blackbox-exporter/templates/deployment.yaml
@@ -16,6 +16,7 @@ spec:
       annotations:
         prometheus.io/scrape: 'true'
         prometheus.io/port: {{ .Values.service.port | quote }}
+        prometheus.io/targets: "kubernetes,openstack"
     spec:
       containers:
         - name: {{ .Chart.Name }}
