--- a/system/kube-monitoring/charts/event-exporter/values.yaml
+++ b/system/kube-monitoring/charts/event-exporter/values.yaml
@@ -12,7 +12,9 @@ resources:
     memory: 100Mi
 
 metrics:
-  port: "9102"
+  port: 9102
+  # Name of the Prometheus supposed to scrape the metrics.
+  prometheus: kubernetes
   config:
     config.yaml: |-
       metrics:
