--- a/system/kube-monitoring/charts/oomkill-exporter/values.yaml
+++ b/system/kube-monitoring/charts/oomkill-exporter/values.yaml
@@ -10,4 +10,6 @@ resources:
     cpu: 20m
     memory: 20Mi
 metrics:
-  port: "9102"
+  port: 9102
+  # Name of the Prometheus supposed to scrape the metrics.
+  prometheus: kubernetes
