--- a/system/kube-monitoring/charts/ns-exporter/values.yaml
+++ b/system/kube-monitoring/charts/ns-exporter/values.yaml
@@ -11,3 +11,12 @@ userDomainName: Default
 #password:
 projectName: cloud_admin
 projectDomainName: ccadmin
+
+metrics:
+  port: 9191
+
+# Deploy Namespace exporters Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
