--- a/common/postgresql/templates/svc.yaml
+++ b/common/postgresql/templates/svc.yaml
@@ -13,6 +13,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: {{ required ".Values.metrics.port missing" .Values.metrics.port | quote }}
+    prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
 {{- end }}
 spec:
   selector:
