[content-repo] move to os prom, own alerts

--- a/openstack/content-repo/values.yaml
+++ b/openstack/content-repo/values.yaml
@@ -9,6 +9,11 @@ password: DEFINED_IN_REGION_CHART
 
 statsd_hostname: DEFINED_IN_REGION_CHART
 
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
+
 # repos:
 #   ubuntu:
 #     #schedule: "15 8,20 * * *"
