[backup-repl] move to os prom, own alerts

--- a/openstack/backup-replication/values.yaml
+++ b/openstack/backup-replication/values.yaml
@@ -17,6 +17,11 @@ swift_http_import:
 statsd:
   exporter_image_version: 'v0.8.1'
 
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
+
 # target:
 #   auth_url: DEFINED_IN_VALUES_FILE
 #   user_name: DEFINED_IN_VALUES_FILE
