--- a/openstack/backup-replication/templates/statsd-service.yaml
+++ b/openstack/backup-replication/templates/statsd-service.yaml
@@ -8,6 +8,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "9102"
+    prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
 spec:
   selector:
     component: statsd-exporter
