default pgmetrics alerts

--- a/common/pgmetrics/values.yaml
+++ b/common/pgmetrics/values.yaml
@@ -148,3 +148,17 @@ resources:
   requests:
     memory: 64Mi
     cpu: 1000m
+
+
+# Default Prometheus alerts and rules.
+alerts:
+  enabled: true
+
+  # Name of the Prometheus supposed to scrape the metrics and to which alerts are assigned.
+  prometheus: openstack
+
+  # The tier of the alert.
+  tier: os
+
+  # Configurable service label of the alerts. Defaults to `.Release.Name`.
+  # service:
