--- a/common/pgmetrics/templates/deployment.yaml
+++ b/common/pgmetrics/templates/deployment.yaml
@@ -33,6 +33,7 @@ spec:
         # Would be nice to have metrics in Maia as well: maia.io/scrape: "true"
         prometheus.io/scrape: "true"
         prometheus.io/port: {{ default 9187 .Values.port | quote }}
+        prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
     spec:
       containers:
       - name: metrics
