--- a/common/memcached/values.yaml
+++ b/common/memcached/values.yaml
@@ -55,3 +55,17 @@ upgrades:
   rollingUpdate:
     maxUnavailable: 1
     maxSurge: 3
+
+
+# Default Prometheus alerts and rules.
+alerts:
+  enabled: true
+
+  # Name of the Prometheus supposed to scrape the metrics and to which alerts are assigned.
+  prometheus: openstack
+
+  # The tier of the alert.
+  tier: os
+
+  # Configurable service label of the alerts. Defaults to `.Release.Name`.
+  # service:
