--- a/common/mariadb/templates/secret.yaml
+++ b/common/mariadb/templates/secret.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mariadb-{{.Values.name}} 
+  name: {{ include "fullName" . }}
   labels:
     system: openstack
     type: database
-    component: mariadb-{{.Values.name}}
+    component: {{ include "fullName" . }}
 type: Opaque
 data:
   root-password: {{ default "" .Values.root_password | b64enc | quote }}
