moves quay alerts

--- a/global/quay/values.yaml
+++ b/global/quay/values.yaml
@@ -21,4 +21,15 @@ postgresql:
     enabled: true
     size: 300Gi
 
+  # Disable default Postgres alerts. Quay uses its own.
+  alerts:
+    enabled: false
+
 #pullSecret:
+
+# Default Prometheus alerts and rules.
+alerts:
+  enabled: true
+
+  # Name of the Prometheus supposed to scrape the metrics and to which alerts are assigned.
+  prometheus: kubernetes
