--- a/global/quay/templates/deployment.yaml
+++ b/global/quay/templates/deployment.yaml
@@ -16,6 +16,7 @@ spec:
       annotations:
         prometheus.io/scrape: 'true'
         prometheus.io/port: '9092'
+        prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
     spec:
       volumes:
         - name: configvolume
