--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -32,6 +32,12 @@ dependencies:
     version: 1.0.0
     condition: snmp_exporter_sd.enabled
 
+  - name: snmp-exporter-alerts
+    alias: snmp_exporter_alerts
+    repository: file://vendor/snmp-exporter-alerts
+    version: 1.0.0
+    condition: snmp_exporter_alerts.enabled
+
   - name: vcenter-service-discovery
     repository: file://vendor/vcenter-service-discovery
     version: 1.0.0
