--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -79,6 +79,9 @@ snmp_exporter:
 snmp_exporter_sd:
   enabled: false
 
+snmp_exporter_alerts:
+  enabled: false
+
 vcenter-service-discovery:
   enabled: false
 
