--- a/system/kube-monitoring/charts/certificate-exporter/values.yaml
+++ b/system/kube-monitoring/charts/certificate-exporter/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: sapcc/k8s-secrets-certificate-exporter
-  tag: v201904111325
+  tag: 557ea2f
   pullPolicy: IfNotPresent
 
 # Port to expose Prometheus metrics on.
@@ -22,3 +22,13 @@ threadiness:      1
 rbac:
   create: false
   serviceAccountName: default
+
+# Default Prometheus alerts and rules.
+alerts:
+  enabled: true
+
+  # Name of the Prometheus supposed to scrape the metrics and to which alerts are assigned.
+  prometheus: kubernetes
+
+  # The tier of the alert.
+  tier: k8s
