[manila] new prometheus

--- a/openstack/manila/templates/api-service.yaml
+++ b/openstack/manila/templates/api-service.yaml
@@ -10,6 +10,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: {{ .Values.global.metrics_port | quote }}
+    prometheus.io/targets: "openstack"
 spec:
   selector:
     name: manila-api
