fix blackbox-tests api alerts

--- a/openstack/blackbox/templates/alerts.yaml
+++ b/openstack/blackbox/templates/alerts.yaml
@@ -5,7 +5,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 
 metadata:
-  name: infra-{{ printf "%s" $path | replace "/" "-" }}
+  name: blackbox-{{ printf "%s" $path | replace "/" "-" }}
   labels:
     type: alerting-rules
     prometheus: {{ required "$values missing" $values }}
