fix blackbox-tests api alerts

--- a/openstack/blackbox/templates/alerts.yaml
+++ b/openstack/blackbox/templates/alerts.yaml
@@ -1,4 +1,5 @@
-{{- $values := .Values.global.alerts.prometheus }}
+{{- $values := .Values }}
+{{- if $values.alerts.enabled }}
 {{- range $path, $bytes := .Files.Glob "alerts/*.alerts" }}
 ---
 apiVersion: monitoring.coreos.com/v1
@@ -7,10 +8,13 @@ kind: PrometheusRule
 metadata:
   name: blackbox-{{ printf "%s" $path | replace "/" "-" }}
   labels:
+    app: blackbox-tests
     type: alerting-rules
-    prometheus: {{ required "$values missing" $values }}
+    tier: os
+    prometheus: {{ required ".Values.alerts.prometheus missing" $values.alerts.prometheus }}
 
 spec:
 {{ printf "%s" $bytes | indent 2 }}
 
+{{- end }}
 {{- end }}
