--- a/openstack/blackbox/values.yaml
+++ b/openstack/blackbox/values.yaml
@@ -59,5 +59,9 @@ global:
   sentry:
     dsn: DEFINED-IN-REGION_SECRET
   port_metrics: '9102'
-  alerts:
-    prometheus: prometheus-openstack
+
+# Deploy Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
