--- a/openstack/blackbox/charts/blackbox-tests-api/templates/service.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-api/templates/service.yaml
@@ -4,8 +4,9 @@ apiVersion: v1
 metadata:
   name: blackbox-tests-api
   annotations:
-    "prometheus.io/scrape": "true"
-    "prometheus.io/port": "{{.Values.global.port_metrics}}"
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "{{.Values.global.port_metrics}}"
+    prometheus.io/targets: “openstack”
 
 spec:
   selector:
