fix blackbox-tests api alerts

--- a/openstack/blackbox/charts/blackbox-tests-api/templates/service.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-api/templates/service.yaml
@@ -5,8 +5,8 @@ metadata:
   name: blackbox-tests-api
   annotations:
     prometheus.io/scrape: "true"
-    prometheus.io/port: "{{.Values.global.port_metrics}}"
-    prometheus.io/targets: “openstack”
+    prometheus.io/port: {{ .Values.global.port_metrics | quote }}
+    prometheus.io/targets: {{ $.Values.alerts.prometheus | quote }}
 
 spec:
   selector:
