fix blackbox-tests api alerts

--- a/openstack/blackbox/templates/alerts.yaml
+++ b/openstack/blackbox/templates/alerts.yaml
@@ -11,7 +11,7 @@ metadata:
     app: blackbox-tests
     type: alerting-rules
     tier: os
-    prometheus: {{ required ".Values.alerts.prometheus missing" $values.alerts.prometheus }}
+    prometheus: {{ required "$values.alerts.prometheus missing" $values.alerts.prometheus }}
 
 spec:
 {{ printf "%s" $bytes | indent 2 }}
