fix blackbox-tests api alerts

--- a/openstack/blackbox/values.yaml
+++ b/openstack/blackbox/values.yaml
@@ -58,7 +58,7 @@ global:
     key: DEFINED-IN-REGION-SECRETS
   sentry:
     dsn: DEFINED-IN-REGION_SECRET
-  port_metrics: '9102'
+  port_metrics: 9102
 
 # Deploy Prometheus alerts.
 alerts:
