--- a/openstack/blackbox/charts/blackbox-tests-regression/templates/service.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-regression/templates/service.yaml
@@ -4,8 +4,9 @@ apiVersion: v1
 metadata:
   name: blackbox-tests-regression
   annotations:
-    "prometheus.io/scrape": "true"
-    "prometheus.io/port": "{{.Values.global.port_metrics}}"
+    prometheus.io/scrape: "true"
+    prometheus.io/port: {{ .Values.global.port_metrics | quote }}
+    prometheus.io/targets: {{ .Values.alerts.prometheus | quote }}
 
 spec:
   selector:
