fix blackbox-tests api alerts

--- a/openstack/blackbox/charts/blackbox-tests-certificates/templates/service.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-certificates/templates/service.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port:  {{ .Values.global.port_metrics | quote }}
-    prometheus.io/targets: {{ .Values.alerts.prometheus | quote }}
+    prometheus.io/targets: {{ .Values.global.alerts.prometheus | quote }}
 
 spec:
   selector:
