--- a/openstack/blackbox/templates/alerts.yaml
+++ b/openstack/blackbox/templates/alerts.yaml
@@ -1,4 +1,4 @@
-{{- $values := .Values }}
+{{- $values := .Values.global }}
 {{- if $values.alerts.enabled }}
 {{- range $path, $bytes := .Files.Glob "alerts/*.alerts" }}
 ---
