fix manila alerts

--- a/openstack/manila/values.yaml
+++ b/openstack/manila/values.yaml
@@ -322,3 +322,8 @@ rabbitmq_notifications:
 # openstack-watcher-middleware
 watcher:
   enabled: true
+
+# prometheus alerts 
+alerts:
+  enabled: true
+  prometheus: openstack
