fix blackbox-tests api alerts

--- a/openstack/blackbox/templates/alerts.yaml
+++ b/openstack/blackbox/templates/alerts.yaml
@@ -1,3 +1,5 @@
+{{- define "prometheus.alerts" }}
+{{/* Generate Prometheus Alert Rules */}}
 {{- $values := .Values.global }}
 {{- range $path, $bytes := .Files.Glob "alerts/*.alerts" }}
 ---
@@ -15,3 +17,4 @@ spec:
 {{ printf "%s" $bytes | indent 2 }}
 
 {{- end }}
+{{ end -}}
