add extra labels to blackbox-tests api deployment

--- a/openstack/blackbox/charts/blackbox-tests-api/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-api/templates/deployment.yaml
@@ -3,6 +3,10 @@ apiVersion: extensions/v1beta1
 
 metadata:
   name: blackbox-tests-api
+  labels:
+    system: openstack
+    component: balckbox-tests
+    type: api
 
 spec:
   replicas: {{.Values.global.replicaCount}}
