--- a/openstack/manila/templates/api-service.yaml
+++ b/openstack/manila/templates/api-service.yaml
@@ -10,7 +10,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: {{ .Values.global.metrics_port | quote }}
-    prometheus.io/targets: "openstack"
+    prometheus.io/targets: {{ required ".Values.alerts.prometheus" .Values.alerts.prometheus |  quote }}
 spec:
   selector:
     name: manila-api
