[hermes] prom alerts

--- a/openstack/hermes/templates/api-service.yaml
+++ b/openstack/hermes/templates/api-service.yaml
@@ -8,6 +8,7 @@ metadata:
     system: openstack
     component: hermes
   annotations:
+    prometheus.io/targets: "openstack"
     prometheus.io/scrape: "true"
     prometheus.io/port: "80"
 spec:
