--- a/openstack/hermes/templates/logstash-service.yaml
+++ b/openstack/hermes/templates/logstash-service.yaml
@@ -7,6 +7,7 @@ metadata:
     system: openstack
     service: audit
   annotations:
+    prometheus.io/targets: "openstack"
     prometheus.io/scrape: "true"
     prometheus.io/port: "9198"
 spec:
