--- a/openstack/hermes/values.yaml
+++ b/openstack/hermes/values.yaml
@@ -46,3 +46,9 @@ rabbitmq_notifications:
     admin:
       user: admin
       # password: DEFINED-IN-SECRETS
+
+# Deploy hermes Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
