--- a/openstack/manila/templates/api-service.yaml
+++ b/openstack/manila/templates/api-service.yaml
@@ -17,3 +17,5 @@ spec:
   ports:
     - name: manila-api
       port: {{.Values.api_port_internal}}
+    - name: metrics
+      port: {{ .Values.global.metrics_port }}
