--- a/system/kube-monitoring/charts/kube-rules/Chart.yaml
+++ b/system/kube-monitoring/charts/kube-rules/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: A collection of Prometheus alerting and aggregation rules for Kubernetes.
-name: prometheus-rules
-version: 1.0.3
+name: kube-rules
+version: 1.0.0
