added prometheus target annotations for some common helm-charts

--- a/common/memcached/templates/service.yaml
+++ b/common/memcached/templates/service.yaml
@@ -12,6 +12,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "{{.Values.metrics.port}}"
+    prometheus.io/targets: "{{ .Values.metrics.prometheus | quote }}"
 {{- end }}
 spec:
   ports:
