--- a/common/postgresql/templates/svc.yaml
+++ b/common/postgresql/templates/svc.yaml
@@ -13,6 +13,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "{{default 9187 .Values.metrics.port }}"
+    prometheus.io/targets: "{{ required ".Values.metrics.prometheus missing" .Values.metrics.prometheus }}"
 {{- end }}
 spec:
   selector:
@@ -40,6 +41,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "9188"
+    prometheus.io/targets: "{{ required ".Values.metrics.prometheus missing" .Values.metrics.prometheus }}"
 spec:
   clusterIP: None
   ports:
