--- a/common/postgresql/values.yaml
+++ b/common/postgresql/values.yaml
@@ -120,6 +120,8 @@ metrics:
   imagePullPolicy: IfNotPresent
 
   port: 9187
+  prometheus: 'openstack'
+  
   customMetrics:
     pg_database:
       query: "SELECT d.datname AS datname, CASE WHEN pg_catalog.has_database_privilege(d.datname, 'CONNECT') THEN pg_catalog.pg_database_size(d.datname) ELSE 0 END AS size_bytes FROM pg_catalog.pg_database d where datname not in ('template0', 'template1', 'postgres')"
