--- a/common/rabbitmq/values.yaml
+++ b/common/rabbitmq/values.yaml
@@ -48,6 +48,7 @@ metrics:
   user: monitoring
   password: null
   port: 9150
+  prometheus: 'openstack'
   resources:
     limits:
       memory: 128Mi
