fix typo in blackbox-tests-api

--- a/openstack/blackbox/charts/blackbox-tests-api/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-api/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   name: blackbox-tests-api
   labels:
     system: openstack
-    component: balckbox-tests
+    component: blackbox-tests
     type: api
 
 spec:
