--- a/openstack/blackbox/charts/blackbox-tests-api/templates/service.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-api/templates/service.yaml
@@ -9,7 +9,7 @@ metadata:
     prometheus.io/targets: {{ .Values.global.alerts.prometheus | quote }}
   labels:
     system: openstack
-    component: balckbox-tests
+    component: blackbox-tests
     type: api
     service: metrics
 
