add labels to blackbox-tests

--- a/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
@@ -3,6 +3,10 @@ apiVersion: extensions/v1beta1
 
 metadata:
   name: blackbox-tests-canary
+  labels:
+    system: openstack
+    component: blackbox-tests
+    type: canary
 
 spec:
   replicas: {{.Values.global.replicaCount}}
