--- a/openstack/blackbox/charts/blackbox-tests-certificates/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-certificates/templates/deployment.yaml
@@ -3,6 +3,10 @@ apiVersion: extensions/v1beta1
 
 metadata:
   name: blackbox-tests-certificates
+  labels:
+    system: openstack
+    component: blackbox-tests
+    type: certificates
 
 spec:
   replicas: {{.Values.global.replicaCount}}
