--- a/openstack/blackbox/charts/blackbox-tests-integrity/templates/service.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-integrity/templates/service.yaml
@@ -7,6 +7,12 @@ metadata:
     prometheus.io/scrape: "true"
     prometheus.io/port: {{ .Values.global.port_metrics | quote }}
     prometheus.io/targets: {{ .Values.global.alerts.prometheus | quote }}
+  labels:
+    system: openstack
+    component: blackbox-tests
+    type: integrity
+    service: metrics
+
 
 spec:
   selector:
