--- a/openstack/neutron/templates/vct-nsxv3-agent-configmap.yaml
+++ b/openstack/neutron/templates/vct-nsxv3-agent-configmap.yaml
@@ -38,9 +38,21 @@ template: |
       {%- set hostname = "nsx-ctl-" + name + "." + domain %}
       nsxv3_login_hostname = {= hostname =}
       nsxv3_login_password = {= username | derive_password(hostname) | quote =}
-
+      {%- set tzname = name + "-vlan" %}
+      {% if name == "bb93" %}
+      {%- set tzname = "TZ-VLAN" %}
+      {% endif %}
+      nsxv3_transport_zone_name = {= tzname =}
       {{- range $k, $v := .Values.drivers.nsxv3.defaults.NSXV3 }}
       {{ $k }} = {{ $v }}
       {{- end }}
+
+      [vsphere]
+      # vcenter connection info for the migration functions
+      # TODO - remove it after migration
+      vsphere_login_username = {= host =}
+      vsphere_login_password = {= username | quote =}
+      vsphere_login_hostname = {= password | quote =}
+      vsphere_suppress_ssl_wornings = True
   {% endif %}
 {{ end }}
