--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -117,7 +117,7 @@ drivers:
         nsxv3_connection_retry_count: 10
         nsxv3_connection_retry_sleep: 5
         nsxv3_login_port: 443
-        nsxv3_transport_zone_name: TZ-VLAN
+#       nsxv3_transport_zone_name: TZ-VLAN
         nsxv3_suppress_ssl_wornings: True
         nsxv3_max_records_per_query: 2000
         nsxv3_requests_per_second: 1
