Enable multus enabled isolated neutron-network-agents

--- a/openstack/neutron/templates/configmap-etc.yaml
+++ b/openstack/neutron/templates/configmap-etc.yaml
@@ -12,6 +12,8 @@ data:
 {{ include (print .Template.BasePath "/etc/_api-paste.ini.tpl") . | indent 4 }}
   dhcp-agent.ini: |
 {{ include (print .Template.BasePath "/etc/_dhcp-agent.ini.tpl") . | indent 4 }}
+  linux-bridge.ini: |
+{{ include (print .Template.BasePath "/etc/_linux-bridge.ini.tpl") . | indent 4 }}
   dnsmasq.conf: |
 {{ include (print .Template.BasePath "/etc/_dnsmasq.conf.tpl") . | indent 4 }}
   l3-agent.ini: |
