--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -30,6 +30,8 @@ pod:
     asr_agent: false
     f5_agent: false
     cisco_ml2_ucsm_bm: false
+  resources:
+    enabled: false
 
 debug: "True"
 port_metrics: '9102'
