--- a/openstack/neutron/templates/daemonset-network_agents.yaml
+++ b/openstack/neutron/templates/daemonset-network_agents.yaml
@@ -1,3 +1,4 @@
+{{- if not (eq .Values.global.region "staging") }}
 kind: DaemonSet
 apiVersion: extensions/v1beta1
 metadata:
@@ -129,3 +130,4 @@ spec:
         - name: host-run-netns
           hostPath:
             path: /run/netns
+{{- end}}
