--- a/openstack/neutron/templates/deployment-aci-agent.yaml
+++ b/openstack/neutron/templates/deployment-aci-agent.yaml
@@ -40,6 +40,16 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 30
             timeoutSeconds: 10
+          {{- if .Values.pod.resources.enabled }}
+          resources:
+            # observed usage: CPU <= 10m, RAM = 260-310 MiB
+            limits:
+              cpu: '20m'
+              memory: '350MiB'
+            requests:
+              cpu: '10m'
+              memory: '256MiB'
+          {{- end }}
           env:
             - name: DEBUG_CONTAINER
               value: "false"
