--- a/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
+++ b/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
@@ -31,11 +31,11 @@ spec:
         - action: keep
           sourceLabels:
             - __meta_kubernetes_service_annotation_prometheus_io_scrape
-          regex: "true"
+          regex: 'true'
         - action: keep
           sourceLabels:
             - __meta_kubernetes_service_annotation_prometheus_io_targets
-          regex: '.*{{ include "prometheus.name" . }}.*'
+          regex: {{ include "prometheusTargetsValue" . | quote }}
         - action: keep
           sourceLabels:
             - __meta_kubernetes_pod_container_port_number
@@ -78,11 +78,11 @@ spec:
         - action: keep
           sourceLabels:
             - __meta_kubernetes_service_annotation_prometheus_io_scrape
-          regex: "true"
+          regex: 'true'
         - action: keep
           sourceLabels:
             - __meta_kubernetes_service_annotation_prometheus_io_targets
-          regex: '.*{{ include "prometheus.name" . }}.*'
+          regex: {{ include "prometheusTargetsValue" . | quote }}
         - action: keep
           source_labels:
             - __meta_kubernetes_pod_annotation_prometheus_io_port_1
