--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -20,7 +20,7 @@ image:
 
 # Mandatory name for this Prometheus.
 # The name is used to find relevant aggregation and alerting rules.
-# Examples: k8s-prometheus, openstack-prometheus, infra-prometheus, maia-prometheus, etc.
+# Examples: kubernetes, openstack, infrastructure, maia, etc.
 name:
 
 # Defines how long data is stored. Format: `[0-9]+(ms|s|m|h|d|w|y)`
@@ -180,7 +180,7 @@ securityContext:
   fsGroup: 0
   runAsUser: 0
 
-# Enabled default service discoveries.
+# Enabled default Prometheus Service Discoveries (SD).
 # The relabeling allows the actual service scrape endpoint to be configured
 # via the following annotations:
 #
@@ -190,8 +190,17 @@ securityContext:
 # * `prometheus.io/path`:     If the metrics path is not `/metrics` override this.
 # * `prometheus.io/port`:     If the metrics are exposed on a different port to the service then set this appropriately.
 serviceDiscoveries:
+  # Targets found via SD are only kept if the `prometheus.io/targets` annotation matches the name of this Prometheus.
+  # However this can be overridden using the following parameter.
+  # The result is a regex like `.*$prometheusName.*|.*$additionalTargets[i].*`
+  # additionalTargets:
+  #   - ...
+
+  # SD for Kubernetes services and endpoints.
   endpoints:
     enabled: true
+
+  # SD for Kubernetes Pods. See https://github.com/coreos/prometheus-operator/issues/38.
   pods:
     enabled: false
 
