--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -67,6 +67,11 @@ prometheus-collector-operated:
     create: false
     name: default
 
+  # Discover targets with `prometheus.io/targets=kubernetes` annotation as well.
+  serviceDiscoveries:
+    additionalTargets:
+      - kubernetes
+
 # Values for operated Prometheus frontend.
 # Only used if global.prometheus_operated.enabled: true.
 prometheus-frontend-operated:
