prom=kubernetes tier=k8s

--- a/openstack/backup-etcd/templates/prometheus-alerts.yaml
+++ b/openstack/backup-etcd/templates/prometheus-alerts.yaml
@@ -9,7 +9,7 @@ metadata:
   name: {{ printf "%s" $path | replace "/" "-" }}
   labels:
     app: backup-replication
-    tier: os
+    tier: k8s
     type: alerting-rules
     prometheus: {{ required ".Values.alerts.prometheus missing" $values.alerts.prometheus }}
 
