--- a/openstack/backup-etcd/values.yaml
+++ b/openstack/backup-etcd/values.yaml
@@ -24,4 +24,4 @@ backup_os_password: DEFINED-IN-REGION-SECRETS
 alerts:
   enabled: true
   # Name of the Prometheus to which the alerts should be assigned to.
-  prometheus: openstack
+  prometheus: kubernetes
