[infra-mon] move arista service discovery (#802)

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -53,3 +53,9 @@ dependencies:
     repository: file://vendor/arista-exporter
     version: 0.1.0
     condition: arista-exporter.enabled
+
+  - name: arista-service-discovery
+    alias: arista-service-discovery
+    repository: file://vendor/arista-service-discovery
+    version: 0.1.0
+    condition: arista-exporter.enabled
