[infra-mon] alias correction

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -49,13 +49,13 @@ dependencies:
     condition: atlas.enabled
 
   - name: arista-exporter
-    alias: arista-exporter
+    alias: arista_exporter
     repository: file://vendor/arista-exporter
     version: 0.1.0
     condition: arista-exporter.enabled
 
   - name: arista-service-discovery
-    alias: arista-service-discovery
+    alias: arista_service_discovery
     repository: file://vendor/arista-service-discovery
     version: 0.1.0
     condition: arista-exporter.enabled
