update infra-monitoring-edit rolebinding

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -11,8 +11,7 @@ rbac:
   role:
     kind: ClusterRole
     name: edit
-  subject:
-    kind: ServiceAccount
+  service_account:
     name: infra-monitoring
     namespace: default
 
