--- a/system/infra-monitoring/templates/rolebinding.yaml
+++ b/system/infra-monitoring/templates/rolebinding.yaml
@@ -10,7 +10,7 @@ roleRef:
   kind: {{ default "ClusterRole" .Values.rbac.role.kind | quote }}
   name: {{ .Values.rbac.role.name | quote }}
 subjects:
-  - kind: {{ default "ServiceAccount" .Values.rbac.subject.kind | quote }}
-    name: {{ .Values.rbac.subject.name | quote }}
-    namespace: {{ default "default" .Values.rbac.subject.namespace | quote }}
+  - kind: ServiceAccount
+    name: {{ .Values.rbac.service_account.name | quote }}
+    namespace: {{ .Values.rbac.service_account.namespace | quote }}
 {{- end -}}
