fix role binding infra-monitoring

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -12,8 +12,8 @@ rbac:
     kind: ClusterRole
     name: edit
   service_account:
-    name: infra-monitoring
-    namespace: default
+    name: default
+    namespace: infra-monitoring
 
 prometheus_server:
   enabled: false
