--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -31,6 +31,7 @@ prometheus_server:
     key: scrape-config.yaml
   configMaps:
     - atlas-targets
+    - arista-sd
 
   # alertmanagers:
   #  - alertmanager.eu-de-1.cloud.sap
