--- a/global/concourse/values.yaml
+++ b/global/concourse/values.yaml
@@ -11,11 +11,13 @@ worker:
 
 concourse:
   image: concourse/concourse
-  imageTag: "5.1.0"
+  imageTag: "5.2.0"
   pullPolicy: IfNotPresent
 
   concourse:
     web:
+      clusterName: "Concourse CI"
+
       defaultBuildLogsToRetain: "50"
       maxBuildLogsToRetain: "100"
 
@@ -64,6 +66,16 @@ concourse:
         bindIp: 0.0.0.0
         bindPort: "9391"
 
+      enableBuildAuditing: true
+      enableContainerAuditing: true
+      enableJobAuditing: true
+      enablePipelineAuditing: true
+      enableResourceAuditing: true
+      enableSystemAuditing: true
+      enableTeamAuditing: true
+      enableWorkerAuditing: true
+      enableVolumeAuditing: true
+
     worker:
       workDir: /concourse-work-dir
 
@@ -82,6 +94,12 @@ concourse:
     service:
       annotations:
         - prometheus.io/targets: "kubernetes"
+
+    strategy:
+      type: RollingUpdate
+      rollingUpdate:
+        maxSurge: 1
+        maxUnavailable: 25%
 
   worker:
     enabled: false
