--- a/openstack/ironic/templates/quota-classes-kq.yaml
+++ b/openstack/ironic/templates/quota-classes-kq.yaml
@@ -14,7 +14,8 @@ python: |
 
     resource_classes = set(node.resource_class
                            for node in bm.node.list(fields=['resource_class'])
-                           if node.resource_class)
+                           if node.resource_class and not
+                           node.resource_class.startswith(('tempest-Resource_Class-', 'ResClass-')))
 
     quotas = {'instances_{}'.format(r): 0 for r in resource_classes}
 
