rabbitmq with default alerts

--- a/common/rabbitmq/values.yaml
+++ b/common/rabbitmq/values.yaml
@@ -56,6 +56,19 @@ metrics:
       memory: 64Mi
       cpu: 50m
 
+# Default Prometheus alerts and rules.
+alerts:
+  enabled: true
+
+  # Name of the Prometheus supposed to scrape the metrics and to which alerts are assigned.
+  prometheus: openstack
+
+  # The tier of the alert.
+  tier: os
+
+  # Configurable service label of the alerts. Defaults to `.Release.Name`.
+  # service:
+
 replicas: 1
 
 upgrades:
