[nova] Enable raise error 500 instead of empty list
Since the clients we employ cannot cope with/depend on the list of
servers returned by nova to include all servers, we enable raising an
error if one of the cells is down.

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -156,6 +156,9 @@ api:
     enabled_apis: osapi_compute,metadata
     use_forwarded_for: True
 
+  api:
+    list_records_by_skipping_down_cells: false
+
 api_metadata:
   DEFAULT:
     api_paste_config: /etc/nova/api-paste.ini
