--- a/openstack/grafanasix/values.yaml
+++ b/openstack/grafanasix/values.yaml
@@ -48,6 +48,7 @@ persistence:
 
 ingress:
   enabled: false
+  global: false
 
 elasticsearch:
   # version may be overridden to 5 in some landscapes
